<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/welcomeHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/actor"
            android:text="@string/welcomeBack"
            android:textColor="#CEF187A5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="118dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/welcomeHome"
            app:layout_constraintStart_toStartOf="@+id/welcomeHome"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHome"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/nameHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/welcomeHome"
            app:layout_constraintStart_toStartOf="@+id/welcomeHome"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/locationHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/welcomeHome"
            app:layout_constraintStart_toStartOf="@+id/welcomeHome"
            app:layout_constraintTop_toBottomOf="@+id/nameHome" />

        <Button
            android:id="@+id/editProfileHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/editProfile"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/welcomeHome"
            app:layout_constraintStart_toStartOf="@+id/welcomeHome"
            app:layout_constraintTop_toBottomOf="@+id/locationHome" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/oneStoryADay"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/welcomeHome"
            app:layout_constraintStart_toStartOf="@+id/welcomeHome"
            app:layout_constraintTop_toBottomOf="@+id/editProfileHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>